--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://anjingkun.github.io/myblog
+baseURL: https://Anjingkun.github.io/myblog
 languageCode: en-us
 title: My New Hugo Site
 theme: "PaperMod"
